# mle-training

./: .flake8  Assignment 3.1 Solution.ipynb  Housing_Model_Deployment.ipynb  README.md  docker_script  env.yml  my_conda_session  my_git_session  my_unix_session  nonstandardcode.py  setup.cfg  setup.py  train.py
Assignment_4.1_main/: README.md  log_file.txt  setup.cfg
Assignment_4.1_main/data/models/: DecisionTreeRegressor.pkl  LinearRegression.pkl
Assignment_4.1_main/housing_packaged/: ingest_data.py  score.py
Assignment_4.1_main/housing_packaged/housing_packaged.egg-info/: PKG-INFO  SOURCES.txt
Assignment_4.1_main/test/: functional_test.py  ingest_data_test.py  score_test.py  train_test.py
Docker_container/: Dockerfile
Docker_container/housing_price_prediction/: README.md  env.yml  setup.py
Docker_container/housing_price_prediction/docs/source/: conf.py  modules.rst
Docker_container/housing_price_prediction/housing_packaged/: main.py  train.py
Docker_container/housing_price_prediction/housing_packaged/housing_packaged.egg-info/: PKG-INFO  SOURCES.txt
Docker_container/housing_price_prediction/test/: functional_test.py  train_test.py
docs/source/: conf.py
