[metadata]
name = housing_packaged
version = 0.3
author = Purva Patidar
author_email = purva.patidar@tigeranalytics.com
description = Package made for assignment 4.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PurvaPatidar-Tiger/mle-training
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = housing_packaged
packages = find:
python_requires = >=3.6

[options.packages.find]
where = housing_packaged

[flake8]
ignore = ["E501"]